Fixed a lot of path name issues for the gitpages urls

--- a/SpaceInvaders/CSS/spaceinvaders.css
+++ b/SpaceInvaders/CSS/spaceinvaders.css
@@ -3,7 +3,7 @@
 
 body
 {
-	background: #000000 url('../assets/stars.gif') repeat top left;
+	background: #000000 url('../Assets/stars.gif') repeat top left;
 }
 
 #stats
